iac/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disziplin-ingress
  namespace: default
  annotations:
    # Diese Annotationen sind für den History-Mode und Path Rewriting in Nginx Ingress Controller
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Für Backend /api/users -> /users
    nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # Dies fängt 404s ab und leitet sie an index.html weiter für SPAs
      location / {
        try_files $uri $uri/ /index.html;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: eevee
      http:
        paths:
          # Regel für das Backend API
          - path: /api(/|$)(.*) # RegEx, um /api/ zu entfernen
            pathType: Prefix
            backend:
              service:
                name: backend-app-service
                port:
                  number: 8080

          # Regel für das Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-app-service
                port:
                  number: 3000
